--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,21 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
 }
+p,
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+img {
+  display: block; 
+}
+
 :root {
   --ocean:#404BBF;
   --iris:#4D5AE5;
@@ -13,8 +28,14 @@ body {
   --slate: #434455;
   --cloud: #F4F4FD;
   --cornflower: #E7E9FC;
-  
 }
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .list {
   list-style: none;
 }
@@ -29,31 +50,68 @@ body {
 .btns {
   cursor: pointer;
 }
+.section-padding {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
 
 /* =============COMPONENTS============ */
 
 /* =============HEADER============ */
-.logo {
+.top-header {
+  border-bottom: 1px solid #E7E9FC;
+}
+.header-container {
+  display: flex; 
+  align-items: center;
+}
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+.logo {  
   font-family: 'Raleway',sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  /* ^^^^^^???^^^^^ */
   color:var(--iris);
+  
 }
 .logo-studio {
   color: var(--navy-blue);
 }
-.main-nav-list:hover,
-.main-nav-list:focus {
+.main-nav-menu {
+  display: flex;
+  margin-left: 76px;
+}
+
+.main-nav-item + .main-nav-item {
+  margin-left: 40px;
+}
+
+.main-nav-link{
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.main-nav-link:hover,
+.main-nav-link:focus {
   color: var(--ocean);
 }
+
 .contact-us {
   font-style: normal;
+  margin-left: auto;
 }
+
+.contacts-list {
+  display: flex;
+  
+}
+
 .contacts {
   font-weight: 400;
   font-size: 16px;
@@ -62,29 +120,44 @@ body {
   color: var(--slate);
 }
 
+.contacts-item + .contacts-item {
+  margin-left: 40px;
+}
 
 /* =============/HEADER============ */
 
 /* =============HERO============ */
 .hero {
-  width: 1440px;
-  height: 600px;
-  background-color: var(--navy-blue);
+background-color: var(--navy-blue);
 }
+.block-hero {  
+  
+  padding-top: 188px;
+  padding-bottom: 188px;
+  text-align: center;
+    
+}
+
 .main-header {
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #FFFFFF;
-  text-align: center;
+  
 }
 .main-btn {
+  margin-left: auto;
+  margin-right: auto;
+  width: 169px;
+  height: 56px;
+  margin-top: 48px;
   background-color: var(--iris);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  width: 169px;
-  height: 56px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -101,11 +174,16 @@ body {
 /* =============/HERO============ */
 
 /* =============FEATURES============ */
-.menu-items-features {
-  width: 264px;
-  height: 104px;
+.menu-features {
+  display: flex;
+  
+}
+.menu-items-features + .menu-items-features {
+  margin-left: 24px;
+  
 }
 .menu-items-header {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -122,7 +200,11 @@ body {
 /* =============/FEATURES============ */
 
 /* =============WHAT ARE WE DOING============ */
+.project {
+  padding-bottom: 120px;
+}
 .projects-header {
+  margin-bottom: 72px;
   color: var(--navy-blue);
   font-weight: 700;
   font-size: 36px;
@@ -131,15 +213,23 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   }
+  .projects-list {
+    display: flex;
+  }
+  .projects-list-items + .projects-list-items {
+    margin-left: 24px;
+  }
 
 
 /* =============/WHAT ARE WE DOING============ */
 
 /* =============OUR TEAM============ */
+
 .team {
   background-color: var(--cloud);
   }
 .our-team-header {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -148,7 +238,19 @@ body {
   text-transform: capitalize;
   color: var(--navy-blue);
 }
+.our-team-list {
+  display: flex;
+}
+.our-team-item + .our-team-item {
+  margin-left: 30px;
+}
+
+.teammate-img {
+  margin-bottom: 32px;
+}
 .teammate-name {
+  text-align: center;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -156,6 +258,7 @@ body {
   color: var(--navy-blue);
 }
 .teammate-profession {
+  text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -166,12 +269,25 @@ body {
 /* =============FOOTER============ */
 .end-page {
   background-color: var(--navy-blue);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cornflower);
+}
+.container>.logo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.footer-text {
+  width: 264px;
+}
+.logo-studio-end-page {
+  color: var(--cloud);
 }
 /* =============/FOOTER============ */
 
@@ -180,7 +296,20 @@ body {
 
 
 /* =============BUTTONS============ */
+.btns-container {
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+.menu-projects-list {
+  display: flex;
+  justify-content: center;
+}
+.menu-projects-item + .menu-projects-item {
+  margin-left: 24px;
+}
 .menu-projects-btn {
+  display: block;
+  padding: 12px 24px;
   background-color: var(--cloud);
   border: 1px solid var(--cornflower);
   border-radius: 4px;
@@ -199,10 +328,36 @@ body {
 /* =============/BUTTONS============ */
 
 /* =============PROJECT LIST============ */
-.logo-studio-end-page {
-  color: var(--cloud);
-}cloud
+.projects-container {
+  padding-bottom: 120px;
+}
+.our-projects-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.our-projects-item {
+  width: 360px;
+  margin-bottom: 48px;
+  margin-left: 24px;
+  border: 1px solid #E7E9FC
+}
+.our-projects-item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+.our-projects-item:nth-child(3n+1) {
+  margin-left: 0;
+}
+.our-projects-link {
+  display: inline-block;
+  padding-bottom: 32px;
+}
+.our-projects-img {
+  margin-bottom: 32px;
+}
+
 .our-projects-header {
+  margin-bottom: 8px;
+  padding-left: 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -210,9 +365,11 @@ body {
   color: var(--navy-blue);
 }
 .our-projects-text {
+  padding-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--slate);
 }
+
 /* =============/PROJECT LIST============ */
