--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-/* font-family: 'Raleway',
-sans-serif; */
 /* =============COMPONENTS============ */
+
 body { 
   background-color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   color: #434455;
 }
+
 p,
 h1,
 h2,
@@ -17,6 +17,7 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+
 img {
   display: block; 
 }
@@ -29,6 +30,20 @@ img {
   --cloud: #F4F4FD;
   --cornflower: #E7E9FC;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -39,6 +54,7 @@ img {
 .list {
   list-style: none;
 }
+
 .link {
   font-weight: 500;
   font-size: 16px;
@@ -47,29 +63,32 @@ img {
   color: var(--navy-blue);
   text-decoration: none;
 }
+
 .btns {
   cursor: pointer;
 }
-.section-padding {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
 
 /* =============COMPONENTS============ */
 
+
+
+
 /* =============HEADER============ */
+
 .top-header {
   border-bottom: 1px solid #E7E9FC;
 }
+
 .header-container {
   display: flex; 
   align-items: center;
 }
+
 .main-nav {
   display: flex;
   align-items: center;
 }
+
 .logo {  
   font-family: 'Raleway',sans-serif;
   font-weight: 800;
@@ -78,11 +97,12 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color:var(--iris);
-  
 }
+
 .logo-studio {
   color: var(--navy-blue);
 }
+
 .main-nav-menu {
   display: flex;
   margin-left: 76px;
@@ -97,6 +117,7 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+
 .main-nav-link:hover,
 .main-nav-link:focus {
   color: var(--ocean);
@@ -109,7 +130,6 @@ img {
 
 .contacts-list {
   display: flex;
-  
 }
 
 .contacts {
@@ -126,10 +146,15 @@ img {
 
 /* =============/HEADER============ */
 
+
+
+
 /* =============HERO============ */
+
 .hero {
 background-color: var(--navy-blue);
 }
+
 .block-hero {  
   
   padding-top: 188px;
@@ -147,8 +172,8 @@ background-color: var(--navy-blue);
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #FFFFFF;
-  
 }
+
 .main-btn {
   margin-left: auto;
   margin-right: auto;
@@ -165,6 +190,7 @@ background-color: var(--navy-blue);
   letter-spacing: 0.04em;
   color: #FFFFFF;
 }
+
 .main-btn:hover,
 .main-btn:focus {
   background-color: var(--ocean);
@@ -173,15 +199,24 @@ background-color: var(--navy-blue);
 
 /* =============/HERO============ */
 
+
+
+
 /* =============FEATURES============ */
+
+.features {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .menu-features {
   display: flex;
-  
 }
+
 .menu-items-features + .menu-items-features {
   margin-left: 24px;
-  
 }
+
 .menu-items-header {
   margin-bottom: 8px;
   font-weight: 500;
@@ -190,6 +225,7 @@ background-color: var(--navy-blue);
   letter-spacing: 0.02em;
   color: var(--navy-blue);
   }
+
 .menu-items-text {
   font-size: 16px;
   line-height: 1.5;
@@ -199,10 +235,15 @@ background-color: var(--navy-blue);
 
 /* =============/FEATURES============ */
 
+
+
+
 /* =============WHAT ARE WE DOING============ */
+
 .project {
   padding-bottom: 120px;
 }
+
 .projects-header {
   margin-bottom: 72px;
   color: var(--navy-blue);
@@ -213,21 +254,29 @@ background-color: var(--navy-blue);
   letter-spacing: 0.02em;
   text-transform: capitalize;
   }
+
   .projects-list {
     display: flex;
   }
+
   .projects-list-items + .projects-list-items {
     margin-left: 24px;
   }
 
-
 /* =============/WHAT ARE WE DOING============ */
+
+
+
+
 
 /* =============OUR TEAM============ */
 
 .team {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-color: var(--cloud);
   }
+
 .our-team-header {
   margin-bottom: 72px;
   font-weight: 700;
@@ -238,16 +287,15 @@ background-color: var(--navy-blue);
   text-transform: capitalize;
   color: var(--navy-blue);
 }
+
 .our-team-list {
   display: flex;
 }
+
 .our-team-item + .our-team-item {
   margin-left: 30px;
 }
 
-.teammate-img {
-  margin-bottom: 32px;
-}
 .teammate-name {
   text-align: center;
   margin-bottom: 8px;
@@ -257,6 +305,7 @@ background-color: var(--navy-blue);
   letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
+
 .teammate-profession {
   text-align: center;
   font-size: 16px;
@@ -266,18 +315,25 @@ background-color: var(--navy-blue);
 }
 /* =============/OUR TEAM============ */
 
+
+
+
+
 /* =============FOOTER============ */
+
 .end-page {
   background-color: var(--navy-blue);
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cornflower);
 }
+
 .container>.logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -286,6 +342,7 @@ background-color: var(--navy-blue);
 .footer-text {
   width: 264px;
 }
+
 .logo-studio-end-page {
   color: var(--cloud);
 }
@@ -294,19 +351,25 @@ background-color: var(--navy-blue);
 
 /* +++++++++++++PORTFOLIO+++++++++++++ */
 
+.portfolio {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
+
 
 /* =============BUTTONS============ */
-.btns-container {
-  padding-top: 96px;
-  padding-bottom: 72px;
-}
+
 .menu-projects-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 72px;
 }
+
 .menu-projects-item + .menu-projects-item {
   margin-left: 24px;
 }
+
 .menu-projects-btn {
   display: block;
   padding: 12px 24px;
@@ -320,6 +383,7 @@ background-color: var(--navy-blue);
   letter-spacing: 0.04em;
   color: var(--ocean);
 }
+
 .menu-projects-btn:hover,
 .menu-projects-btn:focus {
   background-color: var(--ocean);
@@ -327,45 +391,48 @@ background-color: var(--navy-blue);
 }
 /* =============/BUTTONS============ */
 
+
+
+
+
 /* =============PROJECT LIST============ */
-.projects-container {
-  padding-bottom: 120px;
-}
-.our-projects-list{
+
+.our-projects-list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .our-projects-item {
-  width: 360px;
   margin-bottom: 48px;
   margin-left: 24px;
-  border: 1px solid #E7E9FC
 }
+
 .our-projects-item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
+
 .our-projects-item:nth-child(3n+1) {
   margin-left: 0;
 }
-.our-projects-link {
-  display: inline-block;
+
+.projects-content {
+  width: 360px;
+  padding-top: 32px;
   padding-bottom: 32px;
-}
-.our-projects-img {
-  margin-bottom: 32px;
+  padding-left: 16px;
+  border: 1px solid #E7E9FC;
 }
 
 .our-projects-header {
   margin-bottom: 8px;
-  padding-left: 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
+
 .our-projects-text {
-  padding-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
