--- a/css/styles.css
+++ b/css/styles.css
@@ -423,8 +423,8 @@ img {
 .our-projects-list {
   display: flex;
   flex-wrap: wrap;
-  /* row-gap: 48px;
-  column-gap: 24px; */
+  row-gap: 48px;
+  column-gap: 24px;
 }
 
 .our-projects-item {
@@ -432,13 +432,13 @@ img {
   margin-left: 24px;
 }
 
-.our-projects-item:nth-last-child(-n+3) {
+/* .our-projects-item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
 
 .our-projects-item:nth-child(3n+1) {
   margin-left: 0;
-}
+} */
 
 .projects-content {
   width: 360px;
